--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,30 +1,52 @@
-<header class="site-header sticky">
-
-  <div class="wrapper">
-    
-    <div class="contain-to-grid sticky">
-
-	    <nav class="top-bar" data-topbar role="navigation">
-		  		
-		  <section class="top-bar-section">
-		    <!-- Right Nav Section -->
-		    <ul class="right">
-		      <li class="active blog"><a href="{{ site.baseurl }}/index.html">Blog</a></li>
-		      <li class="about-me"><a class="call-block" href="javascript:void(0)">About</a></li>
-		      <li class="projects"><a class="call-block" href="javascript:void(0)">Projects</a></li>
-		      <li class="stuff"><a href="{{ site.baseurl }}/stuff.html">Stuff</a></li>
-		      <li class="contact"><a class="call-block" href="javascript:void(0)">Contact</a></li>
-		    </ul>
-		
-		    <!-- Left Nav Section -->
-		    <ul class="left">
-		      <li><a class="susuwatari" href="{{ site.baseurl }}"></a></li>
-		    </ul>
-		  </section>
-		</nav>
+<div class="off-canvas-wrap" data-offcanvas>
 	
-	</div>
+	<div class="inner-wrap">
+		
+		<section class="top-line-section show-for-small contain-to-grid sticky">
+			<a class="left-off-canvas-toggle burger-icon"></a>
+			<a class="susuwatari-mobile" href="{{ site.baseurl }}/index.html"></a>
+		</section>
+	
+		<aside class="off-canvas-menu-wrapper left-off-canvas-menu">
+			<div class="close-menu">
+				<a class="exit-off-canvas"></a>
+			</div>
+			<ul class="nav-mobile">
+		      <li class="blog"><a href="{{ site.baseurl }}/index.html">Blog</a></li>
+		      <li class="about-me"><a href="{{ site.baseurl }}/about.html">About</a></li>
+		      <li class="projects"><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
+		      <li class="stuff"><a href="{{ site.baseurl }}/stuff.html">Stuff</a></li>
+		      <li class="contact"><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
+			</ul>
+		</aside>
 
-  </div>
-
-</header>
+		<header class="site-header sticky hide-for-small">
+		
+		  <div class="wrapper">
+		    
+		    <div class="contain-to-grid sticky">
+		
+			    <nav class="top-bar" data-topbar role="navigation">
+				  		
+				  <section class="top-bar-section">
+				    <!-- Right Nav Section -->
+				    <ul class="right">
+				      <li class="active blog"><a href="{{ site.baseurl }}/index.html">Blog</a></li>
+				      <li class="about-me"><a class="call-block" href="javascript:void(0)">About</a></li>
+				      <li class="projects"><a class="call-block" href="javascript:void(0)">Projects</a></li>
+				      <li class="stuff"><a href="{{ site.baseurl }}/stuff.html">Stuff</a></li>
+				      <li class="contact"><a class="call-block" href="javascript:void(0)">Contact</a></li>
+				    </ul>
+				
+				    <!-- Left Nav Section -->
+				    <ul class="left">
+				      <li><a class="susuwatari" href="{{ site.baseurl }}"></a></li>
+				    </ul>
+				  </section>
+				</nav>
+			
+			</div>
+		
+		  </div>
+		
+		</header>
