--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,5 +12,7 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
-
+  
+  {% include comments.html %}
+  
 </div>
