--- a/foundation/scss/components/_blog.scss
+++ b/foundation/scss/components/_blog.scss
@@ -39,3 +39,9 @@
 .comments #footer ul{
 	display:none;  
 }
+.post-image{
+	border: 1px solid #ccc;
+    border-radius: 10px;
+    display: block;
+    margin: 15px 0; 
+}
