--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,6 @@
 <p>I am a Romanian developer, currently working in <i class="fa fa-map-marker"></i> London, UK.</p>
-<p>I am working with PHP, javascript and python. Sound knowledge of magento and a fair wordpress skills. Javascript: jQuery, Angular. CSS: SASS, Foundation, Bootstrap. Other tools: git, phantomjs, casperjs.</p>
-<p><span>node js</span> is one thing that I would like to work on in the future.</p>
+<p>I am working with PHP, javascript (jQuery, Angular, Nodejs), python, Magento, Wordpress, SASS, Foundation, Bootstrap, git, phantomjs, casperjs.</p>
 <p>Most of Google's web products are on my radar, especially <span>analytics</span> and <span>angular</span></p>
-<p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>. BTW, this is a <span>jekyll</span> blog hosted on Github Pages. </p>
+<p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>.
 <p>I have a masters in philosophy and when I have time I like to read good philosophy books.</p>
 <p>Movies: Coen Brothers and Ghibli are on top. More about this in the stuff section. </p>
