--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<p>I am a Romanian developer, currently working in <i class="fa fa-map-marker"></i> London, UK.</p>
+<p>I am a Romanian programmer, currently working in <i class="fa fa-map-marker"></i> London, UK.</p>
 <p>I am working with PHP, Magento, Wordpress, JavaScript, jQuery, Angular, NodeJs, Python, SASS, Foundation, Bootstrap, git, PhantomJs, CasperJs.</p>
 <p>Most of Google's web products are on my radar, especially <span>analytics</span> and <span>angular</span></p>
 <p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>.
