add search to right column

--- a/_layouts/mobile.html
+++ b/_layouts/mobile.html
@@ -19,6 +19,8 @@
       
       <div class="col-right">
 	  	
+	  	{% include search.html %}
+
 	  	{% include popular.html %}
 	  	
 	    {% include categories.html %}
