--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,7 +1,4 @@
----
-layout: default
----
-
+<p>Search website</p>
 <form action="get" id="site_search">
   <label for="search_box">Search</label><input type="text" id="search_box">
   <input type="submit" value="search">
