--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,8 @@
       
       <div class="col-right">
 	  	
+	  	{% include search.html %}
+
 	  	{% include popular.html %}
 	  	
 	    {% include categories.html %}
