--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,7 +1,8 @@
 <p>Search website</p>
 <form action="get" id="site_search">
+  <span class="icon"><i class="fa fa-search"></i></span>
   <input type="text" id="search_box">
-  <input type="submit" value="search">
+  <input type="submit" value="search" id="search_button">
 </form>
 
 <ul id="search_results"></ul>
