--- a/foundation/scss/components/_search.scss
+++ b/foundation/scss/components/_search.scss
@@ -1,11 +1,9 @@
 #search_box{
-  width: 300px;
-  height: 50px;
-  background: #2b303b;
+  width: 100%;
+  height: 30px;
+  background: white;
   border: none;
   font-size: 10pt;
-  float: left;
-  color: #262626;
   padding-left: 45px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -16,4 +14,7 @@
   -ms-transition: background .55s ease;
   -o-transition: background .55s ease;
   transition: background .55s ease;
+}
+#search_button{
+	display:none;
 }
