--- a/foundation/scss/components/_footer.scss
+++ b/foundation/scss/components/_footer.scss
@@ -61,6 +61,9 @@
 .fa-github-alt::before {
     content: "\f113";
 }
+.fa-search::before {
+    content: "\f002";
+}
 .totoro{
 	background: url(../images/totoro.svg) no-repeat;
 	display: inline-block;
