--- a/foundation/scss/components/_search.scss
+++ b/foundation/scss/components/_search.scss
@@ -18,3 +18,11 @@
 #search_button{
 	display:none;
 }
+#site_search .icon{
+  position: absolute;
+  top: 50%;
+  margin-left: 17px;
+  margin-top: 17px;
+  z-index: 1;
+  color: #4f5b66;
+}
