--- a/_includes/search.html
+++ b/_includes/search.html
@@ -5,4 +5,4 @@
   <input type="submit" value="search" id="search_button">
 </form>
 
-<ul id="search_results"></ul>
+<ul id="search_results" class="lists cool-bullet"></ul>
