--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
   <script src="{{ "/assets/scripts/foundation.offcanvas.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/scripts/foundation.topbar.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/scripts/main.js" | prepend: site.baseurl }}"></script>
-  <script src="assets/scripts/lunr.min.js"></script>
-  <script src="assets/scripts/search.js"></script>
+  <script src="{{ "/assets/scripts/lunr.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/scripts/search.js" | prepend: site.baseurl }}"></script>
   
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
