search better right column

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,7 @@
       
       <div class="col-right">
 	  	
-	  	{% include search.html %}
-
-	  	{% include popular.html %}
-	  	
-	    {% include categories.html %}
+	  	{% include right-column.html %}
 
       </div>
       
