--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,4 +1,4 @@
-<p>Search website</p>
+<p>Search website:</p>
 <form action="get" id="site_search">
   <span class="icon"><i class="fa fa-search"></i></span>
   <input type="text" id="search_box">
