--- a/_layouts/mobile.html
+++ b/_layouts/mobile.html
@@ -19,11 +19,7 @@
       
       <div class="col-right">
 	  	
-	  	{% include search.html %}
-
-	  	{% include popular.html %}
-	  	
-	    {% include categories.html %}
+	  	{% include right-column.html %}
 
       </div>
       
