--- a/_includes/popular.html
+++ b/_includes/popular.html
@@ -1,5 +1,6 @@
 <p>Most popular</p>
 <ul class="cool-bullets lists popular">
+	<li><a class="" href="/magento/magento2-command-line-tool.html">Magento2 provides a powerful cli</a></li>
 	<li><a class="" href="/magento/magento-attributes-lists.html">Get magento super attributes as lists</a></li>
 	<li><a class="" href="/magento/magento-upgrade-to-universal-analytics.html">Upgrade to Universal Analytics</a></li>
 	<li><a class="" href="/analytics/magento-analytics-event-tracking.html">Add analytics event tracking in magento</a></li>
