added stack profile

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,3 +4,6 @@
 <p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>.
 <p>I have a masters in philosophy and when I have time I like to read good philosophy books.</p>
 <p>Movies: Coen Brothers and Ghibli are on top. More about this in the stuff section. </p>
+<a href="http://stackexchange.com/users/1232792">
+<img src="http://stackexchange.com/users/flair/1232792.png" width="208" height="58" alt="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+</a>
