--- a/foundation/scss/components/_blog.scss
+++ b/foundation/scss/components/_blog.scss
@@ -46,7 +46,10 @@
     margin: 15px 0;
 }
 .jupyter {
-	table.dataframe{  
+	figure.highlight{
+		margin:10px 0; 
+	}
+	table.dataframe{
 		font-size:12px;
 		width: 100%;
     text-align: center;
