magento statistics for open source

--- a/foundation/scss/components/_blog.scss
+++ b/foundation/scss/components/_blog.scss
@@ -59,3 +59,13 @@
 		}
 	}
 }
+.show-the-codes{
+	cursor: pointer;
+	width: 100%;
+	p{
+		text-decoration: underline;
+	}
+}
+.wrap-the-codes{
+	display:none;
+}
