--- a/foundation/scss/components/_blog.scss
+++ b/foundation/scss/components/_blog.scss
@@ -57,11 +57,12 @@
 		th{
 			text-align: center!important;
 		}
-	} 
+	}
 }
 .show-the-codes{
 	cursor: pointer;
 	width: 100%;
+	margin-top: 10px;
 	p{
 		text-decoration: underline;
 	}
