--- a/_includes/popular.html
+++ b/_includes/popular.html
@@ -1,5 +1,6 @@
 <p>Most popular</p>
 <ul class="cool-bullets lists popular">
+	<li><a class="" href="/data-science/kaggle-kernels-language-python-r.html">Which language is popular on Kaggle</a></li>
 	<li><a class="" href="/data-science/magento-open-source-ecosystem.html">Magento2 open source ecosystem</a></li>
 	<li><a class="" href="/magento2-store-locator-stockists-extension/">Magento2 store locator extension</a></li>
 	<li><a class="" href="/magento/magento2-command-line-tool.html">Magento2 provides a powerful cli</a></li>
