--- a/_includes/popular.html
+++ b/_includes/popular.html
@@ -1,11 +1,8 @@
 <p>Most popular</p>
 <ul class="cool-bullets lists popular">
+	<li><a class="" href="/data-science/most-influential-companies-on-github.html">Most influential companies on github</a></li>
 	<li><a class="" href="/data-science/kaggle-kernels-language-python-r.html">Which language is popular on Kaggle</a></li>
 	<li><a class="" href="/data-science/magento-open-source-ecosystem.html">Magento2 open source ecosystem</a></li>
-	<li><a class="" href="/magento2-store-locator-stockists-extension/">Magento2 store locator extension</a></li>
+	<li><a class="" href="/data-science/most-used-php-versions-on-github.html">Most used php versions on github</a></li>
 	<li><a class="" href="/magento/magento2-command-line-tool.html">Magento2 provides a powerful cli</a></li>
-	<li><a class="" href="/magento/magento-attributes-lists.html">Get magento super attributes as lists</a></li>
-	<li><a class="" href="/magento/magento-upgrade-to-universal-analytics.html">Upgrade to Universal Analytics</a></li>
-	<li><a class="" href="/analytics/magento-analytics-event-tracking.html">Add analytics event tracking in magento</a></li>
-	<li><a class="" href="/magento/magento-change-order-css-js.html">Change order of assets loaded by xml</a></li>
 </ul>
