--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,14 +17,14 @@
   <script src="{{ "/assets/scripts/lunr.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/scripts/search.js" | prepend: site.baseurl }}"></script>
   
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109530360-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-65303587-1', 'auto');
-  ga('send', 'pageview');
-  </script>
+  gtag('config', 'UA-109530360-1');
+</script>
   
 </head>
