--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
 				
 				    <!-- Left Nav Section -->
 				    <ul class="left">
-				      <li><a class="susuwatari" href="{{ site.baseurl }}"></a></li>
+				      <li><a class="susuwatari" href="{{ site.baseurl }}/index.html"></a></li>
 				    </ul>
 				  </section>
 				</nav>
