--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,5 +1,6 @@
 <p>Categories:</p>
 <ul class="cool-bullets lists categories">
+	<li><a class="" href="{{ site.baseurl }}/machine-learning.html">Machine Learning</a></li>
 	<li><a class="" href="{{ site.baseurl }}/data-science.html">Data Science</a></li>
 	<li><a class="" href="{{ site.baseurl }}/magento.html">Magento</a></li>
 	<li><a class="" href="{{ site.baseurl }}/google-analytics.html">Google Analytics</a></li>
