--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   <script src="{{ "/assets/scripts/main.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/scripts/lunr.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/scripts/search.js" | prepend: site.baseurl }}"></script>
-  
+  {% seo %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109530360-1"></script>
 <script>
