--- a/_includes/popular.html
+++ b/_includes/popular.html
@@ -1,8 +1,8 @@
 <p>Most popular</p>
 <ul class="cool-bullets lists popular">
+	<li><a class="" href="/machine-learning/hopfield-networks.html">The ideas behind Hopfield Networks</a></li>
+	<li><a class="" href="/machine-learning/ai-answer-fermi-paradox.html">AI may provide a reason for the Great Silence</a></li>
 	<li><a class="" href="/data-science/most-influential-companies-on-github.html">Most influential companies on github</a></li>
 	<li><a class="" href="/data-science/kaggle-kernels-language-python-r.html">Which language is popular on Kaggle</a></li>
 	<li><a class="" href="/data-science/magento-open-source-ecosystem.html">Magento2 open source ecosystem</a></li>
-	<li><a class="" href="/data-science/most-used-php-versions-on-github.html">Most used php versions on github</a></li>
-	<li><a class="" href="/magento/magento2-command-line-tool.html">Magento2 provides a powerful cli</a></li>
 </ul>
