--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <p>I am a Romanian ML research scientist, currently working in <i class="fa fa-map-marker"></i> London, UK.</p>
 <p>Currently my focus is on machine learning. My masters and PhD are on NLP tools. I teach AI classes at the University of Bucharest. </p>
-<p>Technologies that I've worked with: Python, PyTorch, Tensorflow, LLM, OpenCV, Docker Kubernetes, Django, Snowflake, SQL, Tableau, Hadoop, JavaScript, ReactJS.</p>
+<p>Technologies that I've worked with: Python, PyTorch, Tensorflow, LLM, OpenCV, Docker, Kubernetes, Django, Snowflake, SQL, Tableau, Hadoop, JavaScript, ReactJS.</p>
 <p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>.
 <p>Movies: Coen Brothers and Ghibli are on top. More about this in the stuff section. </p>
 <a href="http://stackexchange.com/users/1232792">
