--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,2 +1,2 @@
 <p>Most of my machine learning projects are done for private companies.
-    One can see my research published on <a target="_blank" href="https://scholar.google.com/citations?user=bksnABgAAAAJ&hl=en"> <i class="fa fa-google-scholar"></i> Google Scholar</a>.</p>
+    One can see my research published on <a target="_blank" href="https://scholar.google.com/citations?user=bksnABgAAAAJ&hl=en">Google Scholar</a>.</p>
