--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 		    <i class="fa fa-linkedin"></i>
 		</a>
 		
-	    <a target="_blank" title="StackOverflow" href="http://stackoverflow.com/users/3711219/claudiu">
+	    <a target="_blank" title="StackOverflow" href="https://stackoverflow.com/users/3711219/claudiu">
 		    <i class="fa fa-stack"></i>
 		</a>
 		
