--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,6 +3,6 @@
 <p>Technologies that I've worked with: Python, PyTorch, Tensorflow, LLM, OpenCV, Docker, Kubernetes, Django, Snowflake, SQL, Tableau, Hadoop, JavaScript, ReactJS.</p>
 <p>To see my projects you can check my <a href="https://github.com/ClaudiuCreanga/" target="_blank"><i class="fa fa-github-alt"></i></a>.
 <p>Movies: Coen Brothers and Ghibli are on top. More about this in the stuff section. </p>
-<a href="http://stackexchange.com/users/1232792">
-<img src="http://stackexchange.com/users/flair/1232792.png" width="208" height="58" alt="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+<a href="https://stackexchange.com/users/1232792">
+<img src="https://stackexchange.com/users/flair/1232792.png" width="208" height="58" alt="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Claudiu Creanga on Stack Exchange, a network of free, community-driven Q&amp;A sites">
 </a>
